[gd_scene load_steps=9 format=2]

[ext_resource path="res://image/title.png" type="Texture" id=1]
[ext_resource path="res://scene/ui/Title/Text.gd" type="Script" id=2]
[ext_resource path="res://sound/title.wav" type="AudioStream" id=3]
[ext_resource path="res://image/start/normal.png" type="Texture" id=4]
[ext_resource path="res://image/start/hover.png" type="Texture" id=5]
[ext_resource path="res://image/start/pressed.png" type="Texture" id=6]
[ext_resource path="res://scene/ui/Title/Title.gd" type="Script" id=7]
[ext_resource path="res://scene/ui/Title/StartGameButton.gd" type="Script" id=8]

[node name="Title" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -448.185
margin_right = 800.0
margin_bottom = 451.815
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -250.0
margin_right = 315.0
margin_bottom = 250.0
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="Timer" parent="Text"]
one_shot = true

[node name="TitleSoundEffect" type="AudioStreamPlayer" parent="Text"]
stream = ExtResource( 3 )

[node name="StartGameButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 273.334
margin_top = 183.911
margin_right = 583.334
margin_bottom = 327.911
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
script = ExtResource( 8 )
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
